tests/snapshots/integration__lifecycle_return_inference_from_shortcut_activation_is_preserved_in_model_dump.snap
---
source: tests/integration.rs
assertion_line: 3191
expression: json
---
{
  "caption": null,
  "events": [
    {
      "kind": {
        "Message": {
          "arrow": "->",
          "from": "A",
          "label": "call",
          "to": "B"
        }
      },
      "span": {
        "end": 24,
        "start": 10
      }
    },
    {
      "kind": {
        "Activate": "B"
      },
      "span": {
        "end": 24,
        "start": 10
      }
    },
    {
      "kind": {
        "Return": {
          "from": "B",
          "label": "done",
          "to": "A"
        }
      },
      "span": {
        "end": 36,
        "start": 25
      }
    }
  ],
  "footbox_visible": true,
  "footer": null,
  "header": null,
  "legend": null,
  "participants": [
    {
      "display": "A",
      "explicit": false,
      "id": "A",
      "role": "Participant"
    },
    {
      "display": "B",
      "explicit": false,
      "id": "B",
      "role": "Participant"
    }
  ],
  "skinparams": [],
  "style": {
    "arrow_color": "#111",
    "group_background_color": "#fafafa",
    "group_border_color": "#666",
    "lifeline_border_color": "#555",
    "note_background_color": "#fff8c4",
    "note_border_color": "#111",
    "participant_background_color": "#f6f6f6",
    "participant_border_color": "#111"
  },
  "teoz": false,
  "title": null
}
