tests/snapshots/integration__multi_mode_handles_three_diagrams.snap
---
source: tests/integration.rs
expression: json
---
[
  {
    "name": "diagram-1.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"160\" viewBox=\"0 0 328 160\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><rect x=\"24\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">A</text><rect x=\"184\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">B</text><line x1=\"84\" y1=\"56\" x2=\"84\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"56\" x2=\"244\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"80\" x2=\"244\" y2=\"80\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,80 236,75 236,85\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"72\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\" fill=\"#111\">one</text><rect x=\"24\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">A</text><rect x=\"184\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">B</text></svg>"
  },
  {
    "name": "diagram-2.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"160\" viewBox=\"0 0 328 160\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><rect x=\"24\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">B</text><rect x=\"184\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">C</text><line x1=\"84\" y1=\"56\" x2=\"84\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"56\" x2=\"244\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"80\" x2=\"244\" y2=\"80\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,80 236,75 236,85\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"72\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\" fill=\"#111\">two</text><rect x=\"24\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">B</text><rect x=\"184\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">C</text></svg>"
  },
  {
    "name": "diagram-3.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"160\" viewBox=\"0 0 328 160\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><rect x=\"24\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">C</text><rect x=\"184\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">A</text><line x1=\"84\" y1=\"56\" x2=\"84\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"56\" x2=\"244\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"80\" x2=\"244\" y2=\"80\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,80 236,75 236,85\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"72\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\" fill=\"#111\">three</text><rect x=\"24\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">C</text><rect x=\"184\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">A</text></svg>"
  }
]
