tests/snapshots/integration__multi_mode_outputs_all_diagrams_as_json.snap
---
source: tests/integration.rs
assertion_line: 2238
expression: json
---
[
  {
    "name": "diagram-1.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"160\" viewBox=\"0 0 328 160\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><rect x=\"24\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Alice</text><rect x=\"184\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Bob</text><line x1=\"84\" y1=\"56\" x2=\"84\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"56\" x2=\"244\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"88\" x2=\"244\" y2=\"88\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,88 236,83 236,93\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"80\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\" fill=\"#111\">one</text><rect x=\"24\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Alice</text><rect x=\"184\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Bob</text></svg>"
  },
  {
    "name": "diagram-2.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"160\" viewBox=\"0 0 328 160\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><rect x=\"24\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Bob</text><rect x=\"184\" y=\"24\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"45\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Carol</text><line x1=\"84\" y1=\"56\" x2=\"84\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"56\" x2=\"244\" y2=\"104\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"88\" x2=\"244\" y2=\"88\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,88 236,83 236,93\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"80\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\" fill=\"#111\">two</text><rect x=\"24\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Bob</text><rect x=\"184\" y=\"104\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"125\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\" fill=\"#111111\">Carol</text></svg>"
  }
]
