tests/snapshots/integration__plain_multi_delimiter_supported_with_multi_flag.snap
---
source: tests/integration.rs
expression: "String::from_utf8(out).unwrap()"
---
<svg xmlns="http://www.w3.org/2000/svg" width="488" height="200" viewBox="0 0 488 200"><rect width="100%" height="100%" fill="white"/><g class="sequence-participant puml-node" data-participant="Alice" data-puml-id="Alice" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="24.0 24.0 120.0 32.0"><rect x="24" y="24" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="84" y="45" class="puml-label" data-puml-owner="Alice" data-puml-label-kind="participant-label" data-puml-bbox="63.9 32.8 40.3 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Alice</text></g><g class="sequence-participant puml-node" data-participant="Bob" data-puml-id="Bob" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="184.0 24.0 120.0 32.0"><rect x="184" y="24" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="244" y="45" class="puml-label" data-puml-owner="Bob" data-puml-label-kind="participant-label" data-puml-bbox="231.9 32.8 24.2 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Bob</text></g><g class="sequence-participant puml-node" data-participant="Carol" data-puml-id="Carol" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="344.0 24.0 120.0 32.0"><rect x="344" y="24" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="404" y="45" class="puml-label" data-puml-owner="Carol" data-puml-label-kind="participant-label" data-puml-bbox="383.9 32.8 40.3 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Carol</text></g><line class="sequence-lifeline puml-edge" data-participant="Alice" data-puml-edge-id="lifeline:Alice" data-puml-family="sequence" data-puml-edge-kind="lifeline" data-puml-from="Alice" data-puml-to="Alice" x1="84" y1="56" x2="84" y2="144" stroke="#555" stroke-width="1" stroke-dasharray="6 4"/><line class="sequence-lifeline puml-edge" data-participant="Bob" data-puml-edge-id="lifeline:Bob" data-puml-family="sequence" data-puml-edge-kind="lifeline" data-puml-from="Bob" data-puml-to="Bob" x1="244" y1="56" x2="244" y2="144" stroke="#555" stroke-width="1" stroke-dasharray="6 4"/><line class="sequence-lifeline puml-edge" data-participant="Carol" data-puml-edge-id="lifeline:Carol" data-puml-family="sequence" data-puml-edge-kind="lifeline" data-puml-from="Carol" data-puml-to="Carol" x1="404" y1="56" x2="404" y2="144" stroke="#555" stroke-width="1" stroke-dasharray="6 4"/><line x1="84" y1="80" x2="244" y2="80" stroke="#111" stroke-width="1.5"/><polygon points="244,80 236,75 236,85" fill="#111" stroke="#111" stroke-width="1"/><line class="puml-edge" data-sequence-from="Alice" data-sequence-to="Bob" data-puml-edge-id="message:Alice:Bob:80" data-puml-family="sequence" data-puml-edge-kind="message" data-puml-from="Alice" data-puml-to="Bob" x1="84" y1="80" x2="244" y2="80" stroke="none" pointer-events="none"/><line x1="244" y1="120" x2="404" y2="120" stroke="#111" stroke-width="1.5"/><polygon points="404,120 396,115 396,125" fill="#111" stroke="#111" stroke-width="1"/><line class="puml-edge" data-sequence-from="Bob" data-sequence-to="Carol" data-puml-edge-id="message:Bob:Carol:120" data-puml-family="sequence" data-puml-edge-kind="message" data-puml-from="Bob" data-puml-to="Carol" x1="244" y1="120" x2="404" y2="120" stroke="none" pointer-events="none"/><g class="sequence-participant puml-node" data-participant="Alice" data-puml-id="Alice" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="24.0 144.0 120.0 32.0"><rect x="24" y="144" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="84" y="165" class="puml-label" data-puml-owner="Alice" data-puml-label-kind="participant-label" data-puml-bbox="63.9 152.8 40.3 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Alice</text></g><g class="sequence-participant puml-node" data-participant="Bob" data-puml-id="Bob" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="184.0 144.0 120.0 32.0"><rect x="184" y="144" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="244" y="165" class="puml-label" data-puml-owner="Bob" data-puml-label-kind="participant-label" data-puml-bbox="231.9 152.8 24.2 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Bob</text></g><g class="sequence-participant puml-node" data-participant="Carol" data-puml-id="Carol" data-puml-kind="participant" data-puml-family="sequence" data-puml-bbox="344.0 144.0 120.0 32.0"><rect x="344" y="144" width="120" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="404" y="165" class="puml-label" data-puml-owner="Carol" data-puml-label-kind="participant-label" data-puml-bbox="383.9 152.8 40.3 17.0" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">Carol</text></g></svg>
