tests/snapshots/integration__preprocessor_assert_false_reports_diagnostic.snap
---
source: tests/integration.rs
expression: stderr
---
<fixture>: error[E_PREPROC_ASSERT]: !assert failed: false : expected failure
