tests/snapshots/integration__preprocessor_unclosed_function_reports_diagnostic.snap
---
source: tests/integration.rs
expression: stderr
---
<fixture>: error[E_FUNCTION_UNCLOSED]: missing `!endfunction` for preprocessor block
