tests/snapshots/integration__queue_role_and_separator_are_preserved_in_model_dump.snap
---
source: tests/integration.rs
expression: json
---
{
  "caption": null,
  "events": [
    {
      "kind": {
        "Message": {
          "arrow": "->",
          "from": "Client",
          "label": "enqueue",
          "to": "Q"
        }
      },
      "span": {
        "end": 66,
        "start": 45
      }
    },
    {
      "kind": {
        "Separator": "Processing"
      },
      "span": {
        "end": 83,
        "start": 67
      }
    },
    {
      "kind": {
        "Message": {
          "arrow": "->",
          "from": "Q",
          "label": "done",
          "to": "Client"
        }
      },
      "span": {
        "end": 102,
        "start": 84
      }
    }
  ],
  "footbox_visible": true,
  "footer": null,
  "header": null,
  "hide_unlinked": false,
  "legend": null,
  "participants": [
    {
      "display": "Client",
      "explicit": true,
      "id": "Client",
      "role": "Participant"
    },
    {
      "display": "Jobs",
      "explicit": true,
      "id": "Q",
      "role": "Queue"
    }
  ],
  "skinparams": [],
  "title": null
}
