tests/snapshots/integration__single_file_defaults_to_text_output.snap
---
source: tests/integration.rs
expression: "String::from_utf8(out).unwrap()"
---
@startuml
Alice -> Bob: hi
@enduml
