tests/snapshots/integration__stdin_dash_path_is_supported.snap
---
source: tests/integration.rs
assertion_line: 2530
expression: "String::from_utf8(out).unwrap()"
---
<svg xmlns="http://www.w3.org/2000/svg" width="232" height="144" viewBox="0 0 232 144"><rect width="100%" height="100%" fill="white"/><rect x="16" y="16" width="80" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="56" y="37" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">A</text><rect x="116" y="16" width="80" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="156" y="37" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">B</text><line x1="56" y1="48" x2="56" y2="96" stroke="#555" stroke-width="1" stroke-dasharray="6 4"/><line x1="156" y1="48" x2="156" y2="96" stroke="#555" stroke-width="1" stroke-dasharray="6 4"/><line x1="56" y1="72" x2="156" y2="72" stroke="#111" stroke-width="1.5"/><polygon points="156,72 148,67 148,77" fill="#111" stroke="#111" stroke-width="1"/><rect x="16" y="96" width="80" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="56" y="117" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">A</text><rect x="116" y="96" width="80" height="32" rx="4" ry="4" fill="#f6f6f6" stroke="#111" stroke-width="1"/><text x="156" y="117" text-anchor="middle" font-family="monospace" font-size="13" fill="#111111">B</text></svg>
