tests/snapshots/integration__stdin_newpage_cli_contract_modes.snap
---
source: tests/integration.rs
assertion_line: 3307
expression: json
---
[
  {
    "name": "diagram-1.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"188\" viewBox=\"0 0 328 188\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><text x=\"24\" y=\"24\" font-family=\"monospace\" font-size=\"18\" font-weight=\"600\">Contract Base</text><rect x=\"24\" y=\"52\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"73\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">A</text><rect x=\"184\" y=\"52\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"73\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">B</text><line x1=\"84\" y1=\"84\" x2=\"84\" y2=\"132\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"84\" x2=\"244\" y2=\"132\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"84\" y1=\"108\" x2=\"244\" y2=\"108\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"244,108 236,103 236,113\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"100\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\">page one</text><rect x=\"24\" y=\"132\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"153\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">A</text><rect x=\"184\" y=\"132\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"153\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">B</text></svg>"
  },
  {
    "name": "diagram-2.svg",
    "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"328\" height=\"188\" viewBox=\"0 0 328 188\"><rect width=\"100%\" height=\"100%\" fill=\"white\"/><text x=\"24\" y=\"24\" font-family=\"monospace\" font-size=\"18\" font-weight=\"600\">Page Two</text><rect x=\"24\" y=\"52\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"73\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">A</text><rect x=\"184\" y=\"52\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"73\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">B</text><line x1=\"84\" y1=\"84\" x2=\"84\" y2=\"132\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"84\" x2=\"244\" y2=\"132\" stroke=\"#555\" stroke-width=\"1\" stroke-dasharray=\"6 4\"/><line x1=\"244\" y1=\"108\" x2=\"84\" y2=\"108\" stroke=\"#111\" stroke-width=\"1.5\"/><polygon points=\"84,108 92,103 92,113\" fill=\"#111\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"92\" y=\"100\" text-anchor=\"start\" font-family=\"monospace\" font-size=\"12\">page two</text><rect x=\"24\" y=\"132\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"84\" y=\"153\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">A</text><rect x=\"184\" y=\"132\" width=\"120\" height=\"32\" rx=\"4\" ry=\"4\" fill=\"#f6f6f6\" stroke=\"#111\" stroke-width=\"1\"/><text x=\"244\" y=\"153\" text-anchor=\"middle\" font-family=\"monospace\" font-size=\"13\">B</text></svg>"
  }
]
